fixed grid layout problem.

--- a/css/style.css
+++ b/css/style.css
@@ -1214,12 +1214,23 @@ body {
 }
 
 .wktab-pangrd {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 20px;
 }
 
 .wktab-pangrd-item {
+  width: -webkit-calc(33.3333% - 13.5px);
+  width: calc(33.3333% - 13.5px);
   background-color: var(--site-color-10);
   border: 1px solid var(--site-color-9);
   -webkit-box-shadow: 2px 2px 0px var(--site-color-9);
@@ -1366,8 +1377,9 @@ body {
 }
 
 @media (max-width: 991px) {
-  .wktab-pangrd {
-    grid-template-columns: repeat(2, 1fr);
+  .wktab-pangrd-item {
+    width: -webkit-calc(50% - 10px);
+    width: calc(50% - 10px);
   }
 }
 @media (max-width: 820px) {
@@ -1397,7 +1409,14 @@ body {
 }
 @media (max-width: 680px) {
   .wktab-pangrd {
-    grid-template-columns: 1fr;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .wktab-pangrd-item {
+    width: 100%;
   }
 }
 .contact-section-outer {
@@ -1427,13 +1446,24 @@ body {
 }
 
 .contact-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 20px;
   width: 100%;
 }
 
 .contact-grid-item {
+  width: -webkit-calc(33.3333% - 13.5px);
+  width: calc(33.3333% - 13.5px);
   padding: 20px;
   border: 1px solid var(--site-color-2);
   -webkit-border-radius: 7px;
@@ -1512,8 +1542,9 @@ body {
 }
 
 @media (max-width: 991px) {
-  .contact-grid {
-    grid-template-columns: repeat(2, 1fr);
+  .contact-grid-item {
+    width: -webkit-calc(50% - 10px);
+    width: calc(50% - 10px);
   }
 }
 @media (max-width: 820px) {
@@ -1523,7 +1554,14 @@ body {
 }
 @media (max-width: 680px) {
   .contact-grid {
-    grid-template-columns: 1fr;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-grid-item {
+    width: 100%;
   }
 }
 /* ---- DARK MODE ---- */
